Tue Sep 20 08:43:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * bin/tao_other_tests.lst:
          Added new IPV6 specific tests.

Tue Sep 20 08:29:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * bin/tao_orb_tests.lst:
          Added new TAO/tests/BiDirectional/run_test_ipv6.pl
          IPV6 test.

Mon Sep 19 12:35:39 2005  Justin Michel  <michel_j@ociweb.com>

        * tests/MT_SOCK_Test.cpp:

          Fix use of ACE_static_cast from my  Fri Sep 2 checkin.

Mon Sep 19 10:51:26 2005  William Otte  <wotte@dre.vanderbilt.edu>

        * bin/generate_doxygen.pl

          Removed obsolete CIAO projects from Doxygen generation.

        * etc/ciao_xml_helpers.doxygen

          Updated path to new config_handlers.

        * etc/ciao_assembly_deployer.doxygen
        * etc/ciao_componentserver.doxygen
        * etc/ciao_daemon.doxygen
        * etc/ciao_serveractivator.doxygen

          Removed obsolete ciao doxygen files.

Sun Sep 18 17:28:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/INET_Addr.cpp:
          Fixed bug in ACE_INET_Addr::string_to_addr().

Sun Sep 18 17:26:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>

        * ace/Log_Msg.cpp:
          Fixed compile error in latest addition to code.

Sun Sep 18 10:08:05 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * ace/Log_Msg.cpp (log): Check for passing of NULL pointers to %s
          formatting strings and replace them with "(null") to avoid
          crashes.  Thanks to Steven Xie <steven.xie@mpathix.com> for
          reporting this and to J.T. for suggesting the fix.

        * protocols/ace/RMCast/Acknowledge.cpp (ACE_RMCast):
          made the default ACE_Hash_Map_Manager size be 10 rather than
          1024.  Thanks to Felix Li <fengli@gmail.com> for reporting
          this.

Fri Sep 16 19:54:20 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/Atomic_Op.cpp:
        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl: